# gelpy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: feature_demo.ipynb  gelpy_example_use_cases.ipynb  gelpy_presentation.ipynb  process_simple_gel.ipynb
gelpy/: __init__.py  background_BackgroundHandler.py  background_ransac_fit_models.py  image_handling.py  line_profile_handling.py  package_api.py  profile_fit_handling.py  profile_fitting_models.py  utility_functions.py
gelpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gelpy/archive/: chatGPT_prompts.ipynb  gel_analysis_tool_dev_composite_class.ipynb
src/gelpy/: __init__.py  background_BackgroundHandler.py  background_ransac_fit_models.py  image_handling.py  line_profile_handling.py  package_api.py  profile_fit_handling.py  profile_fitting_models.py  utility_functions.py
tests/: test_background_ransac_fit_models.py
