[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gelpy"
version = "0.0.1"
authors = [
  { name="Christoph Karfusehr", email="c.karfusehr@gmail.com" },
]
description = "A small python package used for gel electrophoresis visualization, fitting and analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ckarfusehr/GelPy"
"Bug Tracker" = "https://github.com/ckarfusehr/GelPy/issues"