[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gelpy"
version = "0.0.1"
authors = [
  { name = "Christoph Karfusehr", email = "c.karfusehr@gmail.com" }
]
description = "A small python package used for gel electrophoresis visualization, fitting and analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/ckarfusehr/GelPy"
Bug Tracker = "https://github.com/ckarfusehr/GelPy/issues"

[project.dependencies]
numpy = ">=1.24.3"
scipy = ">=1.10.1"
scikit-image = ">=0.21.0"
scikit-learn = ">=1.2.2"
matplotlib = ">=3.7.1"
seaborn = ">=0.12.2"
pandas = ">=2.0.2"