[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gelpy"
version = "0.0.1"
authors = [
  { name = "Christoph Karfusehr", email = "c.karfusehr@gmail.com" }
]
description = "A small python package used for gel electrophoresis visualization, fitting and analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.24.3",
    "scipy>=1.10.1",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.2.2",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2",
    "ipykernel>=6.19.2",
    "pandas>=2.0.2"
]

[project.urls]
homepage = "https://github.com/ckarfusehr/GelPy"
bug-tracker = "https://github.com/ckarfusehr/GelPy/issues"

